crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__script_parse_error_fallback_virtual_ts.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: virtual_file.content.as_str()
---
declare const __vize_component: any;
export default __vize_component;
