crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__strip_json_comments_preserves_strings.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: stripped.as_str()
---
{ "url": "https://example.com" }
