crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__template_as_assertion_prop_virtual_ts.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: snapshot_text(virtual_file.content.as_str())
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// Shared preamble hoisted to the program-wide __vize_helpers.d.ts
// ========== Module Scope (imports) ==========

// ========== Exported Types ==========
export type Props = {
  as?: string
};

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (setup-scope only; signatures hoisted to the shared helpers file)
  const defineProps = __vize_defineProps;
  const defineEmits = __vize_defineEmits;
  const defineExpose = __vize_defineExpose;
  const defineModel = __vize_defineModel;
  const defineSlots = __vize_defineSlots;
  const withDefaults = __vize_withDefaults;
  const useTemplateRef = __vize_useTemplateRef;
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code

  defineProps<{
    as?: string
  }>()

  const value = 'demo'
  const onFocus = (target: HTMLElement) => {
    target.dataset.focused = 'true'
  }

  // @vize-map: 1096:1252 -> 0:135

  // ========== Template Scope (inherits from setup) ==========
  ;(function __template() {
    // Vue template context (delegates to ComponentPublicInstance)
    // @ts-ignore TS2694/TS2307: a `vue` without `ComponentPublicInstance` must degrade template context extras to unchecked, never error.
    type __Ctx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __Ctx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;

  // Props are available in template as variables
  // Access via `propName` or `props.propName`
  const props: __VizePrettify<__DefineProps<Props>> = {} as __DefineProps<Props>;
  void props; // Mark as used to avoid TS6133
  const _as = props["as"];
  void _as;

  const __vize_native_key_46: unknown extends __VizeNativeElement<"div"> ? unknown : "style" extends keyof __VizeNativeElement<"div"> ? unknown : __VizeComponentAttrCamel<"style"> extends keyof __VizeNativeElement<"div"> ? unknown : never = "style";
  void __vize_native_key_46;
  const __vize_native_prop_check_25: __VizeNativeElementProp<__VizeNativeElement<"div">, "data-value"> = ((value as any));
  void __vize_native_prop_check_25; // VBind
  const __vize_native_prop_check_53: __VizeNativeElementProp<__VizeNativeElement<"div">, "style"> = ({
      ['--demo-value' as any]: value,
    });
  void __vize_native_prop_check_53; // VBind
  void ({
      focusin: (event: FocusEvent) => {
        onFocus(event.target as HTMLElement)
      },
    }); // VOn
  // @vize-map: expr -> 290:391

  // Reference setup bindings (used in template/CSS v-bind)
  void as; void onFocus; void value;
  })();
}

// Invoke setup to verify types
__setup();

export type Emits = {};
type __VizeSlots = {};
export type { __VizeSlots as Slots };

// ========== Default Export ==========
type __VizeComponentInstance = {
  $props: Props;
  readonly __vizeRawProps?: Props;
  $emit: __VizePublicEmit<Emits>;
  $slots: __VizePublicSlots<__VizeSlots>;
} & __VizeComponentPublicBase;
type __VizeComponentConstructor = new <__VizeAuthoredProps = unknown>(props?: __VizeAuthoredProps & __VizeComponentInput<Props, {}, __VizeAuthoredProps>, ...args: any[]) => __VizeUsePublicInstance<__VizeAuthoredProps> extends true ? __VizeComponentInstance : Omit<__VizeComponentInstance, '$props'> & {
$props: __VizeAuthoredKeyWitness<__VizeAuthoredProps> & __VizeComponentInputProps<Props, {}> & __VizeComponentInputGuard<Props, {}, __VizeAuthoredProps>;
};
type __VizeVueComponentOptions = {
  [key: string]: any;
  name?: string;
  __name?: string;
  __file?: string;
  __vccOpts?: any;
  props?: any;
  emits?: any;
  slots?: any;
  setup?: any;
  render?: Function;
  components?: any;
  directives?: any;
  inheritAttrs?: boolean;
  compatConfig?: any;
  call?: (this: unknown, ...args: unknown[]) => never;
  __isFragment?: never;
  __isTeleport?: never;
  __isSuspense?: never;
  __defaults?: any;
  __vapor?: boolean;
  __multiRoot?: boolean;
  __isKeepAlive?: boolean;
  __isBuiltIn?: boolean;
};
declare const __vize_component__: { readonly __vizeComponentMarker: true; readonly __vizeRawProps?: Props; readonly __vizeHasFallthroughProps: true; readonly __vizeFallthroughProps?: Partial<__VizeNativeElement<"div">>; } & __VizeComponentConstructor & __VizeVueComponentOptions;
export default __vize_component__;
