crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__vue_module_stubs_inert.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: stubs.as_str()
---
// Vue SFC modules resolve through materialized .vue.ts files.
